# cs133-project

./: CMakeLists.txt  Makefile  Presentation.pptx  README.md  Report.docx  demo  demo.cpp
demo/: 2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  Makefile  demo  demo.cpp  generator.py  h5reader.py  model.json  weights.h5  weights.json
doc/: Doxyfile
doc/html/: _dense_8hpp.html  _dense_8hpp__dep__incl.dot  _dense_8hpp__incl.dot  _dense_8hpp__incl.md5  _dense_8hpp_source.html  _identity_8hpp.html  _identity_8hpp__dep__incl.dot  _identity_8hpp__dep__incl.md5  _identity_8hpp__incl.md5  _identity_8hpp_source.html  _layer_8hpp.html  _layer_8hpp__dep__incl.md5  _layer_8hpp__incl.dot  _layer_8hpp_source.html  _net_8hpp.html  _net_8hpp__dep__incl.dot  _net_8hpp__dep__incl.md5  _net_8hpp__incl.dot  _net_8hpp__incl.md5  _net_8hpp_source.html  _node_8hpp.html  _node_8hpp__incl.dot  _node_8hpp_source.html  _softmax_8hpp.html  _softmax_8hpp__incl.dot  _softmax_8hpp__incl.md5  _softmax_8hpp_source.html  annotated.html  class_convolutional-members.html  class_convolutional.html  class_convolutional__coll__graph.md5  class_convolutional__inherit__graph.md5  class_dense-members.html  class_dense.html  (+79 more)
docp/: Doxyfile
include/: Layer.hpp  Net.hpp  Net_v2.hpp  Node.hpp  layer.hpp  net.hpp  net_v2.hpp
resources/: h5reader.py  hdf5_structure.json  lenet_model.json  lenet_weights.json  minimodel.json  minimodel.py  miniweights.h5  miniweights.json  model.json  test.py  weights.h5
test/: model.json  test.txt  test0.txt  test5.txt  test6.txt  test7.txt  test8.txt
(+295 files in other folders)
